--- a/templates/index.html
+++ b/templates/index.html
@@ -52,9 +52,6 @@
     <!-- Private Chat List -->
     <div class="channel-display">
       <h5>Direct Messages <i class="fas fa-plus-square"></i></h5>
-      <p onclick="show_private_chat()">Open</p>
-      <p onclick="hide_private_chat()">Close X</p>
-      <p onclick="sliding_panel()">Open Sliding</p>
       <ul id="private-links" class="visible">
       </ul>
     </div>
@@ -72,8 +69,8 @@
         <h5>Current Channel:</h5>
         <h4 id="curr-channel"></h4>
       </div>
-      <div id="workspace-info" onclick="show_ws_users()">
-        <h5></h5><i class="fas fa-users"></i> <span id="workspace-users"></span></h5>
+      <div id="workspace-info" class="clickable" onclick="show_ws_users()">
+        <h5><i class="fas fa-users"></i> <span id="workspace-users"></span></h5>
       </div>
       <hr>
     </div>
@@ -136,8 +133,8 @@
 
   <!-- Workspace Users Sidepanel -->
   <section id="workspace-user-panel">
-    <h4>Users Online in Workspace: </h4>
-    <p onclick="hide_ws_users()">Close X</p>
+    <p class="clickable" onclick="hide_ws_users()">Close X</p>
+    <h4>Users Online in <span id="curr-workspace"></span>:</h4>
     <ul id="workspace-users-list">
 
     </ul>
