Error handler added to redirect to index for non-supported app routes

--- a/templates/index.html
+++ b/templates/index.html
@@ -105,7 +105,7 @@
         <h4 id="private-channel">Placeholder</h4>
       </div>
       <div id="workspace-info">
-        <h5 id="private-chat-close">Close Private Chat X</h5>
+        <h5 id="private-chat-close" class="clickable" onclick="hide_private_chat()">Close Private Chat X</h5>
       </div>
       <hr>
     </div>
