--- a/static/styles.scss
+++ b/static/styles.scss
@@ -347,7 +347,7 @@ CHATROOM/PRIVATE CHANNELS
       margin-bottom: 8px;
     }
 
-    .message-date {
+    .message-date, .message-edited {
       font-weight:300;
       font-size: 12px;
     }
