--- a/static/styles.css
+++ b/static/styles.css
@@ -402,7 +402,7 @@ FOOTER
   padding: 10px 0 !important;
   font-weight: 400;
   background-color: #7f97a5;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 40px;
@@ -455,7 +455,8 @@ LOGIN, REGISTER, ACCOUNT
 ==========================
 */
 .login.container, .register.container {
-  margin-top: 100px;
+  margin-top: 50px;
+  margin-bottom: 50px;
   border-radius: 10px;
   border: 1px solid #333;
   background-color: #f9f9f9;
@@ -510,19 +511,22 @@ LOGIN, REGISTER, ACCOUNT
 .register #inputPassword {
   margin-top: 20px;
 }
-.register [type=radio] {
+.register .radio-img[type=radio] {
   position: absolute;
   opacity: 0;
   width: 0;
   height: 0;
 }
-.register [type=radio] + img {
+.register .radio-img[type=radio] + img {
   cursor: pointer;
   margin: 4px 4px;
   height: 60px;
 }
-.register [type=radio]:checked + img {
+.register .radio-img[type=radio]:checked + img {
   outline: 2px solid #000;
+}
+.register [type=file] {
+  text-align: center;
 }
 .register .delete_account {
   display: none;
