--- a/static/styles.scss
+++ b/static/styles.scss
@@ -466,7 +466,7 @@ FOOTER
   padding: 10px 0 !important;
   font-weight: 400;
   background-color: $theme-med;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 40px;
@@ -525,7 +525,8 @@ LOGIN, REGISTER, ACCOUNT
 */
 
 .login.container, .register.container {
-  margin-top: 100px;
+  margin-top: 50px;
+  margin-bottom: 50px;
   border-radius: 10px;
   border: 1px solid $highlight-dark;
   background-color: $primary-container;
@@ -584,21 +585,25 @@ LOGIN, REGISTER, ACCOUNT
     margin-top: 20px;
   }
 
-  [type=radio] {
+  .radio-img[type=radio] {
     position: absolute;
     opacity: 0;
     width: 0;
     height: 0;
   }
 
-  [type=radio] + img {
+  .radio-img[type=radio] + img {
     cursor: pointer;
     margin: 4px 4px;
     height: 60px;
   }
 
-  [type=radio]:checked + img {
+  .radio-img[type=radio]:checked + img {
     outline: 2px solid #000;
+  }
+
+  [type=file] {
+    text-align: center;
   }
 
   .delete_account {
