--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,9 @@
     </div>
     <hr>
     <footer>
+      <a href="/account"><i class="fas fa-cog"></i> Account Settings</a>
       <a id="logout" href="#"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
+      <hr>
       <p class="footer-text">&copy; 2020 <a href="https://plcoster.github.io/homepage/index.html">P.L.Coster</a></p>
     </footer>
   </div>
