--- a/static/styles.css
+++ b/static/styles.css
@@ -515,18 +515,18 @@ LOGIN, REGISTER, ACCOUNT
 .register #inputPassword {
   margin-top: 20px;
 }
-.register .radio-img[type=radio] {
+.register [type=radio] {
   position: absolute;
   opacity: 0;
   width: 0;
   height: 0;
 }
-.register .radio-img[type=radio] + img {
+.register [type=radio] + img {
   cursor: pointer;
   margin: 4px 4px;
   height: 60px;
 }
-.register .radio-img[type=radio]:checked + img {
+.register [type=radio]:checked + img {
   outline: 2px solid #000;
 }
 .register [type=file] {
