--- a/static/styles.scss
+++ b/static/styles.scss
@@ -590,20 +590,20 @@ LOGIN, REGISTER, ACCOUNT
     margin-top: 20px;
   }
 
-  .radio-img[type=radio] {
+  [type=radio] {
     position: absolute;
     opacity: 0;
     width: 0;
     height: 0;
   }
 
-  .radio-img[type=radio] + img {
+  [type=radio] + img {
     cursor: pointer;
     margin: 4px 4px;
     height: 60px;
   }
 
-  .radio-img[type=radio]:checked + img {
+  [type=radio]:checked + img {
     outline: 2px solid #000;
   }
 
