--- a/templates/register.html
+++ b/templates/register.html
@@ -27,7 +27,7 @@
       <!-- Profile Icon Selection -->
       <p>Select your profile icon:</p>
       <label>
-        <input type="radio" name="profile" value="default_1.png" checked required>
+        <input type="radio" name="profile" value="default_1.png" required>
         <img class="profile-icon" src="/static/Images/profile/default_1.png">
       </label>
       <label>
@@ -44,7 +44,7 @@
       </label>
       <br>
       <label>
-        <input type="radio" id="user_img" name="profile" value="user_upload">
+        <input type="radio" id="user_img" name="profile" value="user_upload" checked>
         <p>OR Upload your own profile icon:</p>
         <input type="file" accept=".png,.jpeg,.jpg,.gif" class="form-control-file" name="user_profile_img" onchange="loadFile(event)" autocomplete="off">
         <p class="mb-3 text-muted">File types accepted: .png, .jpg, .jpeg, .gif<br>Max File Size: 2 MB</p>
