--- a/static/styles.css
+++ b/static/styles.css
@@ -357,7 +357,7 @@ WS-USER PANEL
   height: 100%;
   z-index: 3;
   overflow-x: hidden;
-  padding: 20px 20px 65px 20px;
+  padding: 20px 0 65px 0;
   background-color: #f9f9f9;
   opacity: 0;
   border-left: 1px solid #7f97a5;
